--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "jw-guitar-tabs",
+	"name": "jw-guitar-tabs_svelte-web",
 	"version": "1.5.0",
 	"description": "JW Guitar Tabs is a website where people who love our JW songs can enjoy playing the simplest tabs on their guitar.",
 	"license": "MIT",
-	"repository": "https://github.com/zeddrix/jw-guitar-tabs",
+	"repository": "https://github.com/zeddrix/jw-guitar-tabs_svelte-web",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "rm -rf build && svelte-kit build && touch build/.nojekyll",
