--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "rm -rf build && svelte-kit build && touch build/.nojekyll",
-		"deploy": "npm run build && npx gh-pages -d build -t true",
+		"deploy": "npx gh-pages -d build -t true",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
