--- a/internal/manifest.json
+++ b/internal/manifest.json
@@ -1,11 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-c1e11a20.js",
+    "file": "start-9f4f1bb3.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
-      "_preload-helper-eaf481c8.js",
+      "_paths-6ae34fac.js",
       "_singletons-a6a7384f.js"
     ],
     "dynamicImports": [
@@ -55,7 +55,7 @@
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-ae6713ed.js",
+    "file": "pages/index.svelte-4d78c43d.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -63,7 +63,7 @@
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
       "_helperFunctions-2523e54d.js",
-      "_preload-helper-eaf481c8.js",
+      "_paths-6ae34fac.js",
       "_navigation-bd39ff07.js",
       "_singletons-a6a7384f.js"
     ],
@@ -229,8 +229,8 @@
   "_singletons-a6a7384f.js": {
     "file": "chunks/singletons-a6a7384f.js"
   },
-  "_preload-helper-eaf481c8.js": {
-    "file": "chunks/preload-helper-eaf481c8.js"
+  "_paths-6ae34fac.js": {
+    "file": "chunks/paths-6ae34fac.js"
   },
   "_helperFunctions-2523e54d.js": {
     "file": "chunks/helperFunctions-2523e54d.js",
