--- a/internal/manifest.json
+++ b/internal/manifest.json
@@ -1,12 +1,13 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-9f4f1bb3.js",
+    "file": "start-467fc5b0.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
-      "_paths-6ae34fac.js",
-      "_singletons-a6a7384f.js"
+      "_preload-helper-b1059d52.js",
+      "_singletons-a6a7384f.js",
+      "_paths-4b3c6e7e.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
@@ -26,7 +27,7 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-1a4c1c71.js",
+    "file": "pages/__layout.svelte-d31960fd.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -34,6 +35,7 @@
       "_vendor-a14c9fe5.js",
       "_helperFunctions-2523e54d.js",
       "_navigation-bd39ff07.js",
+      "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
       "_singletons-a6a7384f.js"
     ],
@@ -42,20 +44,21 @@
     ]
   },
   "src/routes/__error.svelte": {
-    "file": "pages/__error.svelte-4fddbce8.js",
+    "file": "pages/__error.svelte-cb7cdd9b.js",
     "src": "src/routes/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
-      "_NotFoundScreen-a34e3f43.js"
+      "_NotFoundScreen-bc503e92.js",
+      "_paths-4b3c6e7e.js"
     ],
     "css": [
       "assets/pages/__error.svelte-992190ed.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-4d78c43d.js",
+    "file": "pages/index.svelte-66863baf.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -63,7 +66,8 @@
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
       "_helperFunctions-2523e54d.js",
-      "_paths-6ae34fac.js",
+      "_preload-helper-b1059d52.js",
+      "_paths-4b3c6e7e.js",
       "_navigation-bd39ff07.js",
       "_singletons-a6a7384f.js"
     ],
@@ -75,87 +79,93 @@
     ]
   },
   "src/routes/categories/children-songs/index.svelte": {
-    "file": "pages/categories/children-songs/index.svelte-9fbcd503.js",
+    "file": "pages/categories/children-songs/index.svelte-5d597725.js",
     "src": "src/routes/categories/children-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_CategoryPage-37836c62.js",
+      "_CategoryPage-ea97916d.js",
       "_helperFunctions-2523e54d.js",
+      "_paths-4b3c6e7e.js",
       "_LoaderScreen-85e0b185.js"
     ]
   },
   "src/routes/categories/children-songs/[songId].svelte": {
-    "file": "pages/categories/children-songs/_songId_.svelte-27e56aa0.js",
+    "file": "pages/categories/children-songs/_songId_.svelte-e6ff23ac.js",
     "src": "src/routes/categories/children-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_TabsPage-0f54fb72.js",
+      "_TabsPage-52bbc6a3.js",
       "_helperFunctions-2523e54d.js",
+      "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
       "_LoaderScreen-85e0b185.js",
-      "_NotFoundScreen-a34e3f43.js"
+      "_NotFoundScreen-bc503e92.js"
     ]
   },
   "src/routes/categories/original-songs/index.svelte": {
-    "file": "pages/categories/original-songs/index.svelte-9595132c.js",
+    "file": "pages/categories/original-songs/index.svelte-a6ac1b6c.js",
     "src": "src/routes/categories/original-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_CategoryPage-37836c62.js",
+      "_CategoryPage-ea97916d.js",
       "_helperFunctions-2523e54d.js",
+      "_paths-4b3c6e7e.js",
       "_LoaderScreen-85e0b185.js"
     ]
   },
   "src/routes/categories/original-songs/[songId].svelte": {
-    "file": "pages/categories/original-songs/_songId_.svelte-1ca40fd9.js",
+    "file": "pages/categories/original-songs/_songId_.svelte-eb5f0c5a.js",
     "src": "src/routes/categories/original-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_TabsPage-0f54fb72.js",
+      "_TabsPage-52bbc6a3.js",
       "_helperFunctions-2523e54d.js",
+      "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
       "_LoaderScreen-85e0b185.js",
-      "_NotFoundScreen-a34e3f43.js"
+      "_NotFoundScreen-bc503e92.js"
     ]
   },
   "src/routes/categories/kingdom-songs/index.svelte": {
-    "file": "pages/categories/kingdom-songs/index.svelte-ecdb3116.js",
+    "file": "pages/categories/kingdom-songs/index.svelte-4497a956.js",
     "src": "src/routes/categories/kingdom-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_CategoryPage-37836c62.js",
+      "_CategoryPage-ea97916d.js",
       "_helperFunctions-2523e54d.js",
+      "_paths-4b3c6e7e.js",
       "_LoaderScreen-85e0b185.js"
     ]
   },
   "src/routes/categories/kingdom-songs/[songId].svelte": {
-    "file": "pages/categories/kingdom-songs/_songId_.svelte-9d8c882a.js",
+    "file": "pages/categories/kingdom-songs/_songId_.svelte-6f20da51.js",
     "src": "src/routes/categories/kingdom-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_TabsPage-0f54fb72.js",
+      "_TabsPage-52bbc6a3.js",
       "_helperFunctions-2523e54d.js",
+      "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
       "_LoaderScreen-85e0b185.js",
-      "_NotFoundScreen-a34e3f43.js"
+      "_NotFoundScreen-bc503e92.js"
     ]
   },
   "src/routes/copyright.svelte": {
@@ -206,13 +216,14 @@
     ]
   },
   "src/routes/about.svelte": {
-    "file": "pages/about.svelte-cc8ce57a.js",
+    "file": "pages/about.svelte-8383b8db.js",
     "src": "src/routes/about.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
+      "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
       "_helperFunctions-2523e54d.js"
     ],
@@ -229,8 +240,11 @@
   "_singletons-a6a7384f.js": {
     "file": "chunks/singletons-a6a7384f.js"
   },
-  "_paths-6ae34fac.js": {
-    "file": "chunks/paths-6ae34fac.js"
+  "_paths-4b3c6e7e.js": {
+    "file": "chunks/paths-4b3c6e7e.js"
+  },
+  "_preload-helper-b1059d52.js": {
+    "file": "chunks/preload-helper-b1059d52.js"
   },
   "_helperFunctions-2523e54d.js": {
     "file": "chunks/helperFunctions-2523e54d.js",
@@ -250,10 +264,11 @@
       "_singletons-a6a7384f.js"
     ]
   },
-  "_NotFoundScreen-a34e3f43.js": {
-    "file": "chunks/NotFoundScreen-a34e3f43.js",
+  "_NotFoundScreen-bc503e92.js": {
+    "file": "chunks/NotFoundScreen-bc503e92.js",
     "imports": [
-      "_vendor-a14c9fe5.js"
+      "_vendor-a14c9fe5.js",
+      "_paths-4b3c6e7e.js"
     ],
     "css": [
       "assets/NotFoundScreen-a4058da8.css"
@@ -266,12 +281,13 @@
       "_helperFunctions-2523e54d.js"
     ]
   },
-  "_CategoryPage-37836c62.js": {
-    "file": "chunks/CategoryPage-37836c62.js",
+  "_CategoryPage-ea97916d.js": {
+    "file": "chunks/CategoryPage-ea97916d.js",
     "imports": [
       "_vendor-a14c9fe5.js",
       "_helperFunctions-2523e54d.js",
       "_MetaHead-2dfdfdb5.js",
+      "_paths-4b3c6e7e.js",
       "_LoaderScreen-85e0b185.js"
     ],
     "css": [
@@ -287,14 +303,15 @@
       "assets/LoaderScreen-75a89f03.css"
     ]
   },
-  "_TabsPage-0f54fb72.js": {
-    "file": "chunks/TabsPage-0f54fb72.js",
+  "_TabsPage-52bbc6a3.js": {
+    "file": "chunks/TabsPage-52bbc6a3.js",
     "imports": [
       "_vendor-a14c9fe5.js",
       "_helperFunctions-2523e54d.js",
+      "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
       "_LoaderScreen-85e0b185.js",
-      "_NotFoundScreen-a34e3f43.js"
+      "_NotFoundScreen-bc503e92.js"
     ],
     "css": [
       "assets/TabsPage-47f7b330.css"
