--- a/internal/manifest.json
+++ b/internal/manifest.json
@@ -1,13 +1,13 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-a397fad0.js",
+    "file": "start-1aa25cd5.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_preload-helper-b1059d52.js",
-      "_singletons-a6a7384f.js",
-      "_paths-4b3c6e7e.js"
+      "_paths-4b3c6e7e.js",
+      "_singletons-a6a7384f.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
@@ -27,7 +27,7 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-d09accd1.js",
+    "file": "pages/__layout.svelte-e6609f28.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -79,28 +79,28 @@
     ]
   },
   "src/routes/categories/children-songs/index.svelte": {
-    "file": "pages/categories/children-songs/index.svelte-5b915fd1.js",
+    "file": "pages/categories/children-songs/index.svelte-7aa73f11.js",
     "src": "src/routes/categories/children-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_CategoryPage-efa3e7b1.js",
+      "_CategoryPage-99fc7c9b.js",
       "_helperFunctions-2523e54d.js",
       "_paths-4b3c6e7e.js",
       "_LoaderScreen-87bfbc77.js"
     ]
   },
   "src/routes/categories/children-songs/[songId].svelte": {
-    "file": "pages/categories/children-songs/_songId_.svelte-8b62f10f.js",
+    "file": "pages/categories/children-songs/_songId_.svelte-d4bb3737.js",
     "src": "src/routes/categories/children-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_TabsPage-58a1e71c.js",
+      "_TabsPage-a5025eaf.js",
       "_helperFunctions-2523e54d.js",
       "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
@@ -109,28 +109,28 @@
     ]
   },
   "src/routes/categories/original-songs/index.svelte": {
-    "file": "pages/categories/original-songs/index.svelte-7f91e2f1.js",
+    "file": "pages/categories/original-songs/index.svelte-e0d3ba0b.js",
     "src": "src/routes/categories/original-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_CategoryPage-efa3e7b1.js",
+      "_CategoryPage-99fc7c9b.js",
       "_helperFunctions-2523e54d.js",
       "_paths-4b3c6e7e.js",
       "_LoaderScreen-87bfbc77.js"
     ]
   },
   "src/routes/categories/original-songs/[songId].svelte": {
-    "file": "pages/categories/original-songs/_songId_.svelte-354b5807.js",
+    "file": "pages/categories/original-songs/_songId_.svelte-bc615020.js",
     "src": "src/routes/categories/original-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_TabsPage-58a1e71c.js",
+      "_TabsPage-a5025eaf.js",
       "_helperFunctions-2523e54d.js",
       "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
@@ -139,28 +139,28 @@
     ]
   },
   "src/routes/categories/kingdom-songs/index.svelte": {
-    "file": "pages/categories/kingdom-songs/index.svelte-669db8a9.js",
+    "file": "pages/categories/kingdom-songs/index.svelte-e3390e9d.js",
     "src": "src/routes/categories/kingdom-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_CategoryPage-efa3e7b1.js",
+      "_CategoryPage-99fc7c9b.js",
       "_helperFunctions-2523e54d.js",
       "_paths-4b3c6e7e.js",
       "_LoaderScreen-87bfbc77.js"
     ]
   },
   "src/routes/categories/kingdom-songs/[songId].svelte": {
-    "file": "pages/categories/kingdom-songs/_songId_.svelte-162e2272.js",
+    "file": "pages/categories/kingdom-songs/_songId_.svelte-cdae6ce0.js",
     "src": "src/routes/categories/kingdom-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-a14c9fe5.js",
       "_MetaHead-2dfdfdb5.js",
-      "_TabsPage-58a1e71c.js",
+      "_TabsPage-a5025eaf.js",
       "_helperFunctions-2523e54d.js",
       "_paths-4b3c6e7e.js",
       "_NewTabLink-c0c9f34a.js",
@@ -237,11 +237,11 @@
       "assets/vendor-77f1925a.css"
     ]
   },
-  "_singletons-a6a7384f.js": {
-    "file": "chunks/singletons-a6a7384f.js"
-  },
   "_paths-4b3c6e7e.js": {
     "file": "chunks/paths-4b3c6e7e.js"
+  },
+  "_singletons-a6a7384f.js": {
+    "file": "chunks/singletons-a6a7384f.js"
   },
   "_preload-helper-b1059d52.js": {
     "file": "chunks/preload-helper-b1059d52.js"
@@ -281,8 +281,8 @@
       "_helperFunctions-2523e54d.js"
     ]
   },
-  "_CategoryPage-efa3e7b1.js": {
-    "file": "chunks/CategoryPage-efa3e7b1.js",
+  "_CategoryPage-99fc7c9b.js": {
+    "file": "chunks/CategoryPage-99fc7c9b.js",
     "imports": [
       "_vendor-a14c9fe5.js",
       "_helperFunctions-2523e54d.js",
@@ -304,8 +304,8 @@
       "assets/LoaderScreen-75a89f03.css"
     ]
   },
-  "_TabsPage-58a1e71c.js": {
-    "file": "chunks/TabsPage-58a1e71c.js",
+  "_TabsPage-a5025eaf.js": {
+    "file": "chunks/TabsPage-a5025eaf.js",
     "imports": [
       "_vendor-a14c9fe5.js",
       "_helperFunctions-2523e54d.js",
