--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
 	"license": "MIT",
 	"repository": "https://github.com/zeddrix/jw-guitar-tabs_svelte-web",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "rm -rf build && svelte-kit build && touch build/.nojekyll",
-		"deploy": "npx gh-pages -d build -t true",
-		"preview": "svelte-kit preview",
+		"dev": "svelte-kit dev -p 3030",
+		"build": "npm run smui-light && rm -rf build && svelte-kit build --verbose && touch build/.nojekyll",
+		"deploy": "npm run build && npx gh-pages -d build -t true",
+		"preview": "svelte-kit preview -p 3030",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"prepare": "npm run smui-theme-light && npm run smui-theme-dark",
-		"smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
-		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
+		"prepare": "npm run smui-light && npm run smui-dark",
+		"smui-light": "smui-theme compile static/smui.css -i src/theme",
+		"smui-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
 	"devDependencies": {
 		"@smui/banner": "^6.0.0-beta.13",
