--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@smui/icon-button": "^6.0.0-beta.13",
 		"@smui/list": "^6.0.0-beta.13",
 		"@smui/menu": "^6.0.0-beta.13",
+		"@smui/snackbar": "^6.0.0-beta.13",
 		"@smui/textfield": "^6.0.0-beta.13",
 		"@smui/tooltip": "^6.0.0-beta.13",
 		"@smui/top-app-bar": "^6.0.0-beta.13",
