--- a/internal/manifest.json
+++ b/internal/manifest.json
@@ -1,10 +1,10 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-6262d75b.js",
+    "file": "start-eb27c75f.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
+      "_vendor-5a809be3.js",
       "_preload-helper-b1059d52.js",
       "_paths-4b3c6e7e.js",
       "_singletons-a6a7384f.js"
@@ -13,7 +13,6 @@
       "src/routes/__layout.svelte",
       "src/routes/__error.svelte",
       "src/routes/index.svelte",
-      "src/routes/layout__old.svelte",
       "src/routes/categories/children-songs/index.svelte",
       "src/routes/categories/children-songs/[songId].svelte",
       "src/routes/categories/original-songs/index.svelte",
@@ -28,44 +27,46 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-d4f3000a.js",
+    "file": "pages/__layout.svelte-99b86fed.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_stores-77c886c2.js",
-      "_helperFunctions-d39dba89.js",
-      "_Layout-2a88ddcc.js",
-      "_navigation-bd39ff07.js",
-      "_singletons-a6a7384f.js",
+      "_vendor-5a809be3.js",
+      "_stores-61082ddf.js",
       "_paths-4b3c6e7e.js",
-      "_NewTabLink-9a062e2a.js"
+      "_helperFunctions-1e4112a4.js",
+      "_navigation-bd39ff07.js",
+      "_NewTabLink-5a98e2fe.js",
+      "_singletons-a6a7384f.js"
+    ],
+    "css": [
+      "assets/pages/__layout.svelte-5de5aa78.css"
     ]
   },
   "src/routes/__error.svelte": {
-    "file": "pages/__error.svelte-5e60d5d6.js",
+    "file": "pages/__error.svelte-e1855b2b.js",
     "src": "src/routes/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
+      "_vendor-5a809be3.js",
       "_paths-4b3c6e7e.js",
-      "_NotFoundScreen-47590f22.js"
+      "_NotFoundScreen-4e3183ab.js"
     ],
     "css": [
       "assets/pages/__error.svelte-992190ed.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-ece1695d.js",
+    "file": "pages/index.svelte-47df6f47.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_helperFunctions-d39dba89.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_helperFunctions-1e4112a4.js",
       "_preload-helper-b1059d52.js",
       "_paths-4b3c6e7e.js",
       "_navigation-bd39ff07.js",
@@ -78,188 +79,172 @@
       "assets/pages/index.svelte-be2c93a6.css"
     ]
   },
-  "src/routes/layout__old.svelte": {
-    "file": "pages/layout__old.svelte-993a970b.js",
-    "src": "src/routes/layout__old.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-3246f839.js",
-      "_stores-77c886c2.js",
-      "_paths-4b3c6e7e.js",
-      "_helperFunctions-d39dba89.js",
-      "_Layout-2a88ddcc.js",
-      "_navigation-bd39ff07.js",
-      "_singletons-a6a7384f.js",
-      "_NewTabLink-9a062e2a.js"
-    ]
-  },
   "src/routes/categories/children-songs/index.svelte": {
-    "file": "pages/categories/children-songs/index.svelte-599308d5.js",
+    "file": "pages/categories/children-songs/index.svelte-329aceac.js",
     "src": "src/routes/categories/children-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_CategoryPage-948c8923.js",
-      "_helperFunctions-d39dba89.js",
-      "_HeartTooltip-92289b19.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_CategoryPage-4597638f.js",
+      "_helperFunctions-1e4112a4.js",
+      "_HeartTooltip-8076bfab.js",
       "_paths-4b3c6e7e.js",
-      "_LoaderScreen-7dbf4032.js"
+      "_LoaderScreen-4be5fcd5.js"
     ]
   },
   "src/routes/categories/children-songs/[songId].svelte": {
-    "file": "pages/categories/children-songs/_songId_.svelte-69590989.js",
+    "file": "pages/categories/children-songs/_songId_.svelte-21cfabb1.js",
     "src": "src/routes/categories/children-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_TabsPage-b428ac4d.js",
-      "_helperFunctions-d39dba89.js",
-      "_stores-77c886c2.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_TabsPage-ffed0718.js",
+      "_helperFunctions-1e4112a4.js",
+      "_stores-61082ddf.js",
       "_paths-4b3c6e7e.js",
-      "_NewTabLink-9a062e2a.js",
-      "_LoaderScreen-7dbf4032.js",
-      "_NotFoundScreen-47590f22.js"
+      "_NewTabLink-5a98e2fe.js",
+      "_LoaderScreen-4be5fcd5.js",
+      "_NotFoundScreen-4e3183ab.js"
     ]
   },
   "src/routes/categories/original-songs/index.svelte": {
-    "file": "pages/categories/original-songs/index.svelte-f8fefdb7.js",
+    "file": "pages/categories/original-songs/index.svelte-af8a4bbd.js",
     "src": "src/routes/categories/original-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_CategoryPage-948c8923.js",
-      "_helperFunctions-d39dba89.js",
-      "_HeartTooltip-92289b19.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_CategoryPage-4597638f.js",
+      "_helperFunctions-1e4112a4.js",
+      "_HeartTooltip-8076bfab.js",
       "_paths-4b3c6e7e.js",
-      "_LoaderScreen-7dbf4032.js"
+      "_LoaderScreen-4be5fcd5.js"
     ]
   },
   "src/routes/categories/original-songs/[songId].svelte": {
-    "file": "pages/categories/original-songs/_songId_.svelte-7fe00581.js",
+    "file": "pages/categories/original-songs/_songId_.svelte-12387155.js",
     "src": "src/routes/categories/original-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_TabsPage-b428ac4d.js",
-      "_helperFunctions-d39dba89.js",
-      "_stores-77c886c2.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_TabsPage-ffed0718.js",
+      "_helperFunctions-1e4112a4.js",
+      "_stores-61082ddf.js",
       "_paths-4b3c6e7e.js",
-      "_NewTabLink-9a062e2a.js",
-      "_LoaderScreen-7dbf4032.js",
-      "_NotFoundScreen-47590f22.js"
+      "_NewTabLink-5a98e2fe.js",
+      "_LoaderScreen-4be5fcd5.js",
+      "_NotFoundScreen-4e3183ab.js"
     ]
   },
   "src/routes/categories/kingdom-songs/index.svelte": {
-    "file": "pages/categories/kingdom-songs/index.svelte-80d887bb.js",
+    "file": "pages/categories/kingdom-songs/index.svelte-5afe2d22.js",
     "src": "src/routes/categories/kingdom-songs/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_CategoryPage-948c8923.js",
-      "_helperFunctions-d39dba89.js",
-      "_HeartTooltip-92289b19.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_CategoryPage-4597638f.js",
+      "_helperFunctions-1e4112a4.js",
+      "_HeartTooltip-8076bfab.js",
       "_paths-4b3c6e7e.js",
-      "_LoaderScreen-7dbf4032.js"
+      "_LoaderScreen-4be5fcd5.js"
     ]
   },
   "src/routes/categories/kingdom-songs/[songId].svelte": {
-    "file": "pages/categories/kingdom-songs/_songId_.svelte-048e2683.js",
+    "file": "pages/categories/kingdom-songs/_songId_.svelte-9de7fb07.js",
     "src": "src/routes/categories/kingdom-songs/[songId].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_TabsPage-b428ac4d.js",
-      "_helperFunctions-d39dba89.js",
-      "_stores-77c886c2.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_TabsPage-ffed0718.js",
+      "_helperFunctions-1e4112a4.js",
+      "_stores-61082ddf.js",
       "_paths-4b3c6e7e.js",
-      "_NewTabLink-9a062e2a.js",
-      "_LoaderScreen-7dbf4032.js",
-      "_NotFoundScreen-47590f22.js"
+      "_NewTabLink-5a98e2fe.js",
+      "_LoaderScreen-4be5fcd5.js",
+      "_NotFoundScreen-4e3183ab.js"
     ]
   },
   "src/routes/copyright.svelte": {
-    "file": "pages/copyright.svelte-7efe0463.js",
+    "file": "pages/copyright.svelte-4b7e71f1.js",
     "src": "src/routes/copyright.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_helperFunctions-d39dba89.js"
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_helperFunctions-1e4112a4.js"
     ]
   },
   "src/routes/favorites.svelte": {
-    "file": "pages/favorites.svelte-13916ebe.js",
+    "file": "pages/favorites.svelte-20817202.js",
     "src": "src/routes/favorites.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_HeartTooltip-92289b19.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_HeartTooltip-8076bfab.js",
       "_paths-4b3c6e7e.js",
-      "_helperFunctions-d39dba89.js"
+      "_helperFunctions-1e4112a4.js"
     ],
     "css": [
       "assets/pages/favorites.svelte-315fecbd.css"
     ]
   },
   "src/routes/settings.svelte": {
-    "file": "pages/settings.svelte-94157d97.js",
+    "file": "pages/settings.svelte-3f115856.js",
     "src": "src/routes/settings.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_helperFunctions-d39dba89.js"
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_helperFunctions-1e4112a4.js"
     ],
     "css": [
       "assets/pages/settings.svelte-ba855c49.css"
     ]
   },
   "src/routes/history.svelte": {
-    "file": "pages/history.svelte-b2c58462.js",
+    "file": "pages/history.svelte-828fccb9.js",
     "src": "src/routes/history.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
-      "_helperFunctions-d39dba89.js"
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
+      "_helperFunctions-1e4112a4.js"
     ]
   },
   "src/routes/about.svelte": {
-    "file": "pages/about.svelte-581beda3.js",
+    "file": "pages/about.svelte-50194d8f.js",
     "src": "src/routes/about.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js",
-      "_MetaHead-e99e50b4.js",
+      "_vendor-5a809be3.js",
+      "_MetaHead-8b08f276.js",
       "_paths-4b3c6e7e.js",
-      "_NewTabLink-9a062e2a.js",
-      "_helperFunctions-d39dba89.js"
+      "_NewTabLink-5a98e2fe.js",
+      "_helperFunctions-1e4112a4.js"
     ],
     "css": [
       "assets/pages/about.svelte-41e52dde.css"
     ]
   },
-  "_vendor-3246f839.js": {
-    "file": "chunks/vendor-3246f839.js",
+  "_vendor-5a809be3.js": {
+    "file": "chunks/vendor-5a809be3.js",
     "css": [
       "assets/vendor-77f1925a.css"
     ]
@@ -273,35 +258,22 @@
   "_preload-helper-b1059d52.js": {
     "file": "chunks/preload-helper-b1059d52.js"
   },
-  "_stores-77c886c2.js": {
-    "file": "chunks/stores-77c886c2.js",
+  "_stores-61082ddf.js": {
+    "file": "chunks/stores-61082ddf.js",
     "imports": [
-      "_vendor-3246f839.js"
+      "_vendor-5a809be3.js"
     ]
   },
-  "_helperFunctions-d39dba89.js": {
-    "file": "chunks/helperFunctions-d39dba89.js",
+  "_helperFunctions-1e4112a4.js": {
+    "file": "chunks/helperFunctions-1e4112a4.js",
     "imports": [
-      "_vendor-3246f839.js"
+      "_vendor-5a809be3.js"
     ]
   },
-  "_Layout-2a88ddcc.js": {
-    "file": "chunks/Layout-2a88ddcc.js",
+  "_NewTabLink-5a98e2fe.js": {
+    "file": "chunks/NewTabLink-5a98e2fe.js",
     "imports": [
-      "_vendor-3246f839.js",
-      "_helperFunctions-d39dba89.js",
-      "_navigation-bd39ff07.js",
-      "_paths-4b3c6e7e.js",
-      "_NewTabLink-9a062e2a.js"
-    ],
-    "css": [
-      "assets/Layout-d27e5246.css"
-    ]
-  },
-  "_NewTabLink-9a062e2a.js": {
-    "file": "chunks/NewTabLink-9a062e2a.js",
-    "imports": [
-      "_vendor-3246f839.js"
+      "_vendor-5a809be3.js"
     ]
   },
   "_navigation-bd39ff07.js": {
@@ -310,78 +282,78 @@
       "_singletons-a6a7384f.js"
     ]
   },
-  "_NotFoundScreen-47590f22.js": {
-    "file": "chunks/NotFoundScreen-47590f22.js",
+  "_NotFoundScreen-4e3183ab.js": {
+    "file": "chunks/NotFoundScreen-4e3183ab.js",
     "imports": [
-      "_vendor-3246f839.js",
+      "_vendor-5a809be3.js",
       "_paths-4b3c6e7e.js"
     ],
     "css": [
       "assets/NotFoundScreen-a4058da8.css"
     ]
   },
-  "_MetaHead-e99e50b4.js": {
-    "file": "chunks/MetaHead-e99e50b4.js",
+  "_MetaHead-8b08f276.js": {
+    "file": "chunks/MetaHead-8b08f276.js",
     "imports": [
-      "_vendor-3246f839.js",
-      "_helperFunctions-d39dba89.js"
+      "_vendor-5a809be3.js",
+      "_helperFunctions-1e4112a4.js"
     ]
   },
-  "_CategoryPage-948c8923.js": {
-    "file": "chunks/CategoryPage-948c8923.js",
+  "_CategoryPage-4597638f.js": {
+    "file": "chunks/CategoryPage-4597638f.js",
     "imports": [
-      "_vendor-3246f839.js",
-      "_helperFunctions-d39dba89.js",
-      "_MetaHead-e99e50b4.js",
-      "_HeartTooltip-92289b19.js",
+      "_vendor-5a809be3.js",
+      "_helperFunctions-1e4112a4.js",
+      "_MetaHead-8b08f276.js",
+      "_HeartTooltip-8076bfab.js",
       "_paths-4b3c6e7e.js",
-      "_LoaderScreen-7dbf4032.js"
+      "_LoaderScreen-4be5fcd5.js"
     ],
     "css": [
       "assets/CategoryPage-0cbc222f.css"
     ]
   },
-  "_LoaderScreen-7dbf4032.js": {
-    "file": "chunks/LoaderScreen-7dbf4032.js",
+  "_LoaderScreen-4be5fcd5.js": {
+    "file": "chunks/LoaderScreen-4be5fcd5.js",
     "imports": [
-      "_vendor-3246f839.js",
+      "_vendor-5a809be3.js",
       "_paths-4b3c6e7e.js"
     ],
     "css": [
       "assets/LoaderScreen-75a89f03.css"
     ]
   },
-  "_HeartTooltip-92289b19.js": {
-    "file": "chunks/HeartTooltip-92289b19.js",
+  "_HeartTooltip-8076bfab.js": {
+    "file": "chunks/HeartTooltip-8076bfab.js",
     "imports": [
-      "_vendor-3246f839.js",
-      "_helperFunctions-d39dba89.js"
+      "_vendor-5a809be3.js",
+      "_helperFunctions-1e4112a4.js"
     ],
     "css": [
       "assets/HeartTooltip-56397c14.css"
     ]
   },
-  "_TabsPage-b428ac4d.js": {
-    "file": "chunks/TabsPage-b428ac4d.js",
+  "_TabsPage-ffed0718.js": {
+    "file": "chunks/TabsPage-ffed0718.js",
     "imports": [
-      "_vendor-3246f839.js",
-      "_stores-77c886c2.js",
-      "_helperFunctions-d39dba89.js",
+      "_vendor-5a809be3.js",
+      "_stores-61082ddf.js",
+      "_helperFunctions-1e4112a4.js",
       "_paths-4b3c6e7e.js",
-      "_NewTabLink-9a062e2a.js",
-      "_LoaderScreen-7dbf4032.js",
-      "_NotFoundScreen-47590f22.js"
+      "_NewTabLink-5a98e2fe.js",
+      "_LoaderScreen-4be5fcd5.js",
+      "_NotFoundScreen-4e3183ab.js"
     ],
     "css": [
       "assets/TabsPage-47f7b330.css"
     ]
   },
   "node_modules/svelte-carousel/src/main.js": {
-    "file": "chunks/main-222e85b0.js",
+    "file": "chunks/main-5c5937f4.js",
     "src": "node_modules/svelte-carousel/src/main.js",
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-3246f839.js"
+      "_vendor-5a809be3.js"
     ],
     "css": [
       "assets/main-2157c542.css"
