--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "JW Guitar Tabs is a website where people who love our JW songs can enjoy playing the simplest tabs on their guitar.",
 	"license": "MIT",
 	"repository": "https://github.com/zeddrix/jw-guitar-tabs_svelte-web",
+	"type": "module",
 	"scripts": {
 		"dev": "svelte-kit dev -p 3030",
 		"build": "npm run prepare && rm -rf build && svelte-kit build --verbose && touch build/.nojekyll",
@@ -29,7 +30,7 @@
 		"@smui/textfield": "^6.0.0-beta.16",
 		"@smui/tooltip": "^6.0.0-beta.16",
 		"@smui/top-app-bar": "^6.0.0-beta.16",
-		"@sveltejs/adapter-static": "^1.0.0-next.32",
+		"@sveltejs/adapter-static": "^1.0.0-next.34",
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.26.0",
 		"@typescript-eslint/parser": "^5.26.0",
@@ -49,11 +50,10 @@
 		"svelte-carousel": "^1.0.19",
 		"svelte-check": "^2.7.1",
 		"svelte-device-detector": "^0.2.2",
-		"svelte-preprocess": "^4.10.6",
+		"svelte-preprocess": "^4.10.7",
 		"svelte-typeahead": "^4.2.2",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.2",
 		"uuid": "^8.3.2"
-	},
-	"type": "module"
+	}
 }
